--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -145,8 +145,8 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
    staatliche Stelle;
   \label{itm:04-21}   
 
-  \item „betroffene Aufsichtsbehörde“ eine Aufsichtsbehörde, die von der \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} betroffen
-   ist, weil
+  \item „betroffene Aufsichtsbehörde“ eine \hyperref[itm:42-21]{Aufsichtsbehörde}, die von der \hyperref[itm:04-2]
+   {Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} betroffen ist, weil
   \label{itm:04-22}
 
   \begin{enumerate}
