--- a/artikel/12.tex
+++ b/artikel/12.tex
@@ -34,7 +34,7 @@
 
   \item Wird der Verantwortliche auf den Antrag der \hyperref[itm:04-1]{betroffenen Person} hin nicht tätig, so unterrichtet er die
    \hyperref[itm:04-1]{betroffene Person} ohne Verzögerung, spätestens aber innerhalb eines Monats nach Eingang des Antrags über die Gründe
-   hierfür und über die Möglichkeit, bei einer Aufsichtsbehörde Beschwerde einzulegen oder einen gerichtlichen
+   hierfür und über die Möglichkeit, bei einer \hyperref[itm:04-21]{Aufsichtsbehörde} Beschwerde einzulegen oder einen gerichtlichen
    Rechtsbehelf einzulegen.
   \label{itm:12-4}
 
