--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -63,7 +63,7 @@
      dass die Rechtmäßigkeit der aufgrund der Einwilligung bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} berührt wird;
     \label{itm:14-2d}
 
-    \item das Bestehen eines Beschwerderechts bei einer Aufsichtsbehörde;
+    \item das Bestehen eines Beschwerderechts bei einer \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:14-2e}
 
     \item aus welcher Quelle die \hyperref[itm:04-1]{personenbezogenen Daten} stammen und gegebenenfalls ob sie aus öffentlich zugänglichen
