--- a/artikel/15.tex
+++ b/artikel/15.tex
@@ -32,7 +32,7 @@
      \hyperref[itm:04-3]{Einschränkung der Verarbeitung} durch den Verantwortlichen oder eines Widerspruchsrechts gegen diese \hyperref[itm:04-2]{Verarbeitung};
     \label{itm:15-1e}
 
-    \item das Bestehen eines Beschwerderechts bei einer Aufsichtsbehörde;
+    \item das Bestehen eines Beschwerderechts bei einer \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:15-1f}
 
     \item wenn die \hyperref[itm:04-1]{personenbezogenen Daten} nicht bei der \hyperref[itm:04-1]{betroffenen Person} erhoben werden, alle verfügbaren
