--- a/artikel/27.tex
+++ b/artikel/27.tex
@@ -33,7 +33,7 @@
   \label{itm:27-3}
 
   \item Der Vertreter wird durch den Verantwortlichen oder den Auftragsverarbeiter beauftragt, zusätzlich zu diesem oder
-   an seiner Stelle insbesondere für Aufsichtsbehörden und \hyperref[itm:04-1]{betroffene Personen} bei sämtlichen Fragen im Zusammenhang
+   an seiner Stelle insbesondere für \hyperref[itm:04-21]{Aufsichtsbehörden} und \hyperref[itm:04-1]{betroffene Personen} bei sämtlichen Fragen im Zusammenhang
    mit der \hyperref[itm:04-2]{Verarbeitung} zur Gewährleistung der Einhaltung dieser Verordnung als Anlaufstelle zu dienen.
   \label{itm:27-4}
 
