--- a/artikel/31.tex
+++ b/artikel/31.tex
@@ -5,7 +5,7 @@
 \addsec{Text der Verordnung}
 
 Der Verantwortliche und der Auftragsverarbeiter und gegebenenfalls deren Vertreter arbeiten auf Anfrage mit der
-Aufsichtsbehörde bei der Erfüllung ihrer Aufgaben zusammen.
+\hyperref[itm:04-21]{Aufsichtsbehörde} bei der Erfüllung ihrer Aufgaben zusammen.
 
 \addsec{Eigene Notizen}
 
