--- a/artikel/34.tex
+++ b/artikel/34.tex
@@ -42,7 +42,7 @@
   \end{enumerate}
 
   \item Wenn der Verantwortliche die \hyperref[itm:04-1]{betroffene Person} nicht bereits über die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener
-   Daten} benachrichtigt hat, kann die Aufsichtsbehörde unter Berücksichtigung der Wahrscheinlichkeit, mit der die
+   Daten} benachrichtigt hat, kann die \hyperref[itm:04-21]{Aufsichtsbehörde} unter Berücksichtigung der Wahrscheinlichkeit, mit der die
    \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} zu einem hohen Risiko führt, von dem Verantwortlichen verlangen,
    dies nachzuholen, oder sie kann mit einem Beschluss feststellen, dass bestimmte der in \hyperref[itm:34-3]{Absatz 3}
    genannten Voraussetzungen erfüllt sind.
