--- a/artikel/35.tex
+++ b/artikel/35.tex
@@ -38,18 +38,18 @@
 
   \end{enumerate}
 
-  \item Die Aufsichtsbehörde erstellt eine Liste der Verarbeitungsvorgänge, für die gemäß \hyperref[itm:35-1]{Absatz 1}
-   eine Datenschutz-Folgenabschätzung durchzuführen ist, und veröffentlicht diese. Die Aufsichtsbehörde übermittelt
+  \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} erstellt eine Liste der Verarbeitungsvorgänge, für die gemäß \hyperref[itm:35-1]{Absatz 1}
+   eine Datenschutz-Folgenabschätzung durchzuführen ist, und veröffentlicht diese. Die \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt
    diese Listen dem in \hyperref[ch:68]{Artikel 68} genannten Ausschuss.
   \label{itm:35-4}
 
-  \item Die Aufsichtsbehörde kann des Weiteren eine Liste der Arten von Verarbeitungsvorgängen erstellen und
-   veröffentlichen, für die keine Datenschutz-Folgenabschätzung erforderlich ist. Die Aufsichtsbehörde übermittelt
+  \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} kann des Weiteren eine Liste der Arten von Verarbeitungsvorgängen erstellen und
+   veröffentlichen, für die keine Datenschutz-Folgenabschätzung erforderlich ist. Die \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt
    diese Listen dem Ausschuss.
   \label{itm:35-5}
 
   \item Vor Festlegung der in den Absätzen \hyperref[itm:35-4]{4} und \hyperref[itm:35-5]{5} genannten Listen wendet die
-   zuständige Aufsichtsbehörde das Kohärenzverfahren gemäß \hyperref[ch:63]{Artikel 63} an, wenn solche Listen
+   zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} das Kohärenzverfahren gemäß \hyperref[ch:63]{Artikel 63} an, wenn solche Listen
    Verarbeitungstätigkeiten umfassen, die mit dem Angebot von Waren oder Dienstleistungen für \hyperref[itm:04-1]{betroffene Personen} oder
    der Beobachtung des Verhaltens dieser Personen in mehreren Mitgliedstaaten im Zusammenhang stehen oder die den
    freien Verkehr \hyperref[itm:04-1]{personenbezogener Daten} innerhalb der Union erheblich beeinträchtigen könnten.
