--- a/artikel/36.tex
+++ b/artikel/36.tex
@@ -6,24 +6,24 @@
 
 \begin{enumerate}
 
-  \item Der Verantwortliche konsultiert vor der \hyperref[itm:04-2]{Verarbeitung} die Aufsichtsbehörde, wenn aus einer
+  \item Der Verantwortliche konsultiert vor der \hyperref[itm:04-2]{Verarbeitung} die \hyperref[itm:04-21]{Aufsichtsbehörde}, wenn aus einer
    Datenschutz-Folgenabschätzung gemäß \hyperref[ch:35]{Artikel 35} hervorgeht, dass die \hyperref[itm:04-2]{Verarbeitung} ein hohes Risiko
    zur Folge hätte, sofern der Verantwortliche keine Maßnahmen zur Eindämmung des Risikos trifft.
   \label{itm:36-1}
 
-  \item Falls die Aufsichtsbehörde der Auffassung ist, dass die geplante \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:36-1]
+  \item Falls die \hyperref[itm:04-21]{Aufsichtsbehörde} der Auffassung ist, dass die geplante \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:36-1]
    {Absatz 1} nicht im Einklang mit dieser Verordnung stünde, insbesondere weil der Verantwortliche das Risiko nicht
    ausreichend ermittelt oder nicht ausreichend eingedämmt hat, unterbreitet sie dem Verantwortlichen und
    gegebenenfalls dem Auftragsverarbeiter innerhalb eines Zeitraums von bis zu acht Wochen nach Erhalt des Ersuchens um
    Konsultation entsprechende schriftliche Empfehlungen und kann ihre in \hyperref[ch:58]{Artikel 58} genannten
    Befugnisse ausüben. Diese Frist kann unter Berücksichtigung der Komplexität der geplanten \hyperref[itm:04-2]{Verarbeitung} um sechs
-   Wochen verlängert werden. Die Aufsichtsbehörde unterrichtet den Verantwortlichen oder gegebenenfalls den
+   Wochen verlängert werden. Die \hyperref[itm:04-21]{Aufsichtsbehörde} unterrichtet den Verantwortlichen oder gegebenenfalls den
    Auftragsverarbeiter über eine solche Fristverlängerung innerhalb eines Monats nach Eingang des Antrags auf
    Konsultation zusammen mit den Gründen für die Verzögerung. Diese Fristen können ausgesetzt werden, bis die
-   Aufsichtsbehörde die für die Zwecke der Konsultation angeforderten Informationen erhalten hat.
+   \hyperref[itm:04-21]{Aufsichtsbehörde} die für die Zwecke der Konsultation angeforderten Informationen erhalten hat.
   \label{itm:36-2}
 
-  \item Der Verantwortliche stellt der Aufsichtsbehörde bei einer Konsultation gemäß \hyperref[itm:36-1]{Absatz 1}
+  \item Der Verantwortliche stellt der \hyperref[itm:04-21]{Aufsichtsbehörde} bei einer Konsultation gemäß \hyperref[itm:36-1]{Absatz 1}
    folgende Informationen zur Verfügung:
   \label{itm:36-3}
 
@@ -47,12 +47,12 @@
     \item die Datenschutz-Folgenabschätzung gemäß \hyperref[ch:35]{Artikel 35} und
     \label{itm:36-3e}
 
-    \item alle sonstigen von der Aufsichtsbehörde angeforderten Informationen.
+    \item alle sonstigen von der \hyperref[itm:04-21]{Aufsichtsbehörde} angeforderten Informationen.
     \label{itm:36-3f}
 
   \end{enumerate}
 
-  \item Die Mitgliedstaaten konsultieren die Aufsichtsbehörde bei der Ausarbeitung eines Vorschlags für von einem
+  \item Die Mitgliedstaaten konsultieren die \hyperref[itm:04-21]{Aufsichtsbehörde} bei der Ausarbeitung eines Vorschlags für von einem
    nationalen Parlament zu erlassende Gesetzgebungsmaßnahmen oder von auf solchen Gesetzgebungsmaßnahmen basierenden
    Regelungsmaßnahmen, die die \hyperref[itm:04-2]{Verarbeitung} betreffen.
   \label{itm:36-4}
@@ -60,7 +60,7 @@
   \item Ungeachtet des \hyperref[itm:36-1]{Absatzes 1} können Verantwortliche durch das Recht der Mitgliedstaaten
    verpflichtet werden, bei der \hyperref[itm:04-2]{Verarbeitung} zur Erfüllung einer im öffentlichen Interesse liegenden Aufgabe,
    einschließlich der \hyperref[itm:04-2]{Verarbeitung} zu Zwecken der sozialen Sicherheit und der öffentlichen Gesundheit, die
-   Aufsichtsbehörde zu konsultieren und deren vorherige Genehmigung einzuholen.
+   \hyperref[itm:04-21]{Aufsichtsbehörde} zu konsultieren und deren vorherige Genehmigung einzuholen.
   \label{itm:36-5}
    
 \end{enumerate}
