--- a/artikel/37.tex
+++ b/artikel/37.tex
@@ -53,7 +53,7 @@
   \label{itm:37-6}
 
   \item Der Verantwortliche oder der Auftragsverarbeiter veröffentlicht die Kontaktdaten des Datenschutzbeauftragten und
-   teilt diese Daten der Aufsichtsbehörde mit.
+   teilt diese Daten der \hyperref[itm:04-21]{Aufsichtsbehörde} mit.
   \label{itm:37-7}
 
 \end{enumerate}
