--- a/artikel/39.tex
+++ b/artikel/39.tex
@@ -26,10 +26,10 @@
      Durchführung gemäß \hyperref[ch:35]{Artikel 35};
     \label{itm:39-1c}
 
-    \item Zusammenarbeit mit der Aufsichtsbehörde;
+    \item Zusammenarbeit mit der \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:39-1d}
 
-    \item Tätigkeit als Anlaufstelle für die Aufsichtsbehörde in mit der \hyperref[itm:04-2]{Verarbeitung} zusammenhängenden Fragen,
+    \item Tätigkeit als Anlaufstelle für die \hyperref[itm:04-21]{Aufsichtsbehörde} in mit der \hyperref[itm:04-2]{Verarbeitung} zusammenhängenden Fragen,
      einschließlich der vorherigen Konsultation gemäß \hyperref[ch:36]{Artikel 36}, und gegebenenfalls Beratung zu
      allen sonstigen Fragen.
     \label{itm:39-1e}
