--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Die Mitgliedstaaten, die Aufsichtsbehörden, der Ausschuss und die Kommission fördern die Ausarbeitung von
+  \item Die Mitgliedstaaten, die \hyperref[itm:04-21]{Aufsichtsbehörden}, der Ausschuss und die Kommission fördern die Ausarbeitung von
    Verhaltensregeln, die nach Maßgabe der Besonderheiten der einzelnen Verarbeitungsbereiche und der besonderen
    Bedürfnisse von Kleinstunternehmen sowie kleinen und mittleren Unternehmen zur ordnungsgemäßen Anwendung dieser
    Verordnung beitragen sollen.
@@ -45,7 +45,7 @@
      für die Sicherheit der \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[ch:32]{Artikel 32};
     \label{itm:40-2h}
 
-    \item die Meldung von \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} an Aufsichtsbehörden und die
+    \item die Meldung von \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} an \hyperref[itm:04-21]{Aufsichtsbehörden} und die
      Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} von solchen \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten};
     \label{itm:40-2i}
 
@@ -73,14 +73,14 @@
   \item Die Verhaltensregeln gemäß \hyperref[itm:40-2]{Absatz 2 des vorliegenden Artikels} müssen Verfahren vorsehen,
    die es der in \hyperref[itm:41-2]{Artikel 41 Absatz 1} genannten Stelle ermöglichen, die obligatorische Überwachung
    der Einhaltung ihrer Bestimmungen durch die Verantwortlichen oder die Auftragsverarbeiter, die sich zur Anwendung
-   der Verhaltensregeln verpflichten, vorzunehmen, unbeschadet der Aufgaben und Befugnisse der Aufsichtsbehörde, die
+   der Verhaltensregeln verpflichten, vorzunehmen, unbeschadet der Aufgaben und Befugnisse der \hyperref[itm:04-21]{Aufsichtsbehörde}, die
    nach Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständig ist.
   \label{itm:40-4}
 
   \item Verbände und andere Vereinigungen gemäß \hyperref[itm:40-2]{Absatz 2 des vorliegenden Artikels}, die
    beabsichtigen, Verhaltensregeln auszuarbeiten oder bestehende Verhaltensregeln zu ändern oder zu erweitern, legen
-   den Entwurf der Verhaltensregeln bzw. den Entwurf zu deren Änderung oder Erweiterung der Aufsichtsbehörde vor, die
-   nach \hyperref[ch:55]{Artikel 55} zuständig ist. Die Aufsichtsbehörde gibt eine Stellungnahme darüber ab, ob der
+   den Entwurf der Verhaltensregeln bzw. den Entwurf zu deren Änderung oder Erweiterung der \hyperref[itm:04-21]{Aufsichtsbehörde} vor, die
+   nach \hyperref[ch:55]{Artikel 55} zuständig ist. Die \hyperref[itm:04-21]{Aufsichtsbehörde} gibt eine Stellungnahme darüber ab, ob der
    Entwurf der Verhaltensregeln bzw. der Entwurf zu deren Änderung oder Erweiterung mit dieser Verordnung vereinbar ist
    und genehmigt diesen Entwurf der Verhaltensregeln bzw. den Entwurf zu deren Änderung oder Erweiterung, wenn sie der
    Auffassung ist, dass er ausreichende geeignete Garantien bietet.
@@ -88,12 +88,12 @@
 
   \item Wird durch die Stellungnahme nach \hyperref[itm:40-5]{Absatz 5} der Entwurf der Verhaltensregeln bzw. der
    Entwurf zu deren Änderung oder Erweiterung genehmigt und beziehen sich die betreffenden Verhaltensregeln nicht auf
-   Verarbeitungstätigkeiten in mehreren Mitgliedstaaten, so nimmt die Aufsichtsbehörde die Verhaltensregeln in ein
+   Verarbeitungstätigkeiten in mehreren Mitgliedstaaten, so nimmt die \hyperref[itm:04-21]{Aufsichtsbehörde} die Verhaltensregeln in ein
    Verzeichnis auf und veröffentlicht sie.
   \label{itm:40-6}
 
   \item Bezieht sich der Entwurf der Verhaltensregeln auf Verarbeitungstätigkeiten in mehreren Mitgliedstaaten, so legt
-   die nach \hyperref[ch:55]{Artikel 55} zuständige Aufsichtsbehörde -- bevor sie den Entwurf der Verhaltensregeln bzw.
+   die nach \hyperref[ch:55]{Artikel 55} zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} -- bevor sie den Entwurf der Verhaltensregeln bzw.
    den Entwurf zu deren Änderung oder Erweiterung genehmigt -- ihn nach dem Verfahren gemäß \hyperref[ch:63]
    {Artikel 63} dem Ausschuss vor, der zu der Frage Stellung nimmt, ob der Entwurf der Verhaltensregeln bzw. der
    Entwurf zu deren Änderung oder Erweiterung mit dieser Verordnung vereinbar ist oder -- im Fall nach \hyperref
