--- a/artikel/42.tex
+++ b/artikel/42.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Die Mitgliedstaaten, die Aufsichtsbehörden, der Ausschuss und die Kommission fördern insbesondere auf
+  \item Die Mitgliedstaaten, die \hyperref[itm:04-21]{Aufsichtsbehörden}, der Ausschuss und die Kommission fördern insbesondere auf
    Unionsebene die Einführung von datenschutzspezifischen Zertifizierungsverfahren sowie von Datenschutzsiegeln
    und -prüfzeichen, die dazu dienen, nachzuweisen, dass diese Verordnung bei Verarbeitungsvorgängen von
    Verantwortlichen oder Auftragsverarbeitern eingehalten wird. Den besonderen Bedürfnissen von Kleinstunternehmen
@@ -29,11 +29,11 @@
 
   \item Eine Zertifizierung gemäß diesem Artikel mindert nicht die Verantwortung des Verantwortlichen oder des
    Auftragsverarbeiters für die Einhaltung dieser Verordnung und berührt nicht die Aufgaben und Befugnisse der
-   Aufsichtsbehörden, die gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständig sind.
+   \hyperref[itm:04-21]{Aufsichtsbehörden}, die gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständig sind.
   \label{itm:42-4}
 
   \item Eine Zertifizierung nach diesem Artikel wird durch die Zertifizierungsstellen nach \hyperref[ch:43]{Artikel 43}
-   oder durch die zuständige Aufsichtsbehörde anhand der von dieser zuständigen Aufsichtsbehörde gemäß \hyperref
+   oder durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} anhand der von dieser zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß \hyperref
    [itm:58-3]{Artikel 58 Absatz 3} oder -- gemäß \hyperref[ch:63]{Artikel 63} -- durch den Ausschuss genehmigten
    Kriterien erteilt. Werden die Kriterien vom Ausschuss genehmigt, kann dies zu einer gemeinsamen Zertifizierung, dem
    Europäischen Datenschutzsiegel, führen.
@@ -41,7 +41,7 @@
 
   \item Der Verantwortliche oder der Auftragsverarbeiter, der die von ihm durchgeführte \hyperref[itm:04-2]{Verarbeitung} dem
    Zertifizierungsverfahren unterwirft, stellt der Zertifizierungsstelle nach \hyperref[ch:43]{Artikel 43} oder
-   gegebenenfalls der zuständigen Aufsichtsbehörde alle für die Durchführung des Zertifizierungsverfahrens
+   gegebenenfalls der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} alle für die Durchführung des Zertifizierungsverfahrens
    erforderlichen Informationen zur Verfügung und gewährt ihr den in diesem Zusammenhang erforderlichen Zugang zu
    seinen Verarbeitungstätigkeiten.
   \label{itm:42-6}
@@ -49,7 +49,7 @@
   \item Die Zertifizierung wird einem Verantwortlichen oder einem Auftragsverarbeiter für eine Höchstdauer von drei
    Jahren erteilt und kann unter denselben Bedingungen verlängert werden, sofern die einschlägigen Voraussetzungen
    weiterhin erfüllt werden. Die Zertifizierung wird gegebenenfalls durch die Zertifizierungsstellen nach \hyperref
-   [ch:43]{Artikel 43} oder durch die zuständige Aufsichtsbehörde widerrufen, wenn die Voraussetzungen für die
+   [ch:43]{Artikel 43} oder durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} widerrufen, wenn die Voraussetzungen für die
    Zertifizierung nicht oder nicht mehr erfüllt werden.
   \label{itm:42-7}
 
