--- a/artikel/45.tex
+++ b/artikel/45.tex
@@ -29,11 +29,11 @@
      übermittelt werden,
     \label{itm:45-2a}
 
-    \item die Existenz und die wirksame Funktionsweise einer oder mehrerer unabhängiger Aufsichtsbehörden in dem
+    \item die Existenz und die wirksame Funktionsweise einer oder mehrerer unabhängiger \hyperref[itm:04-21]{Aufsichtsbehörden} in dem
      betreffenden Drittland oder denen eine \hyperref[itm:04-29]{internationale Organisation} untersteht und die für die Einhaltung und
      Durchsetzung der Datenschutzvorschriften, einschließlich angemessener Durchsetzungsbefugnisse, für die
      Unterstützung und Beratung der \hyperref[itm:04-1]{betroffenen Personen} bei der Ausübung ihrer Rechte und für die Zusammenarbeit mit
-     den Aufsichtsbehörden der Mitgliedstaaten zuständig sind, und
+     den \hyperref[itm:04-21]{Aufsichtsbehörden} der Mitgliedstaaten zuständig sind, und
     \label{itm:45-2b}
 
     \item die von dem betreffenden Drittland bzw. der betreffenden internationalen Organisation eingegangenen
@@ -51,8 +51,8 @@
    regelmäßige Überprüfung, die mindestens alle vier Jahre erfolgt, vorzusehen, bei der allen maßgeblichen
    Entwicklungen in dem Drittland oder bei der internationalen Organisation Rechnung getragen wird. Im
    Durchführungsrechtsakt werden der territoriale und der sektorale Anwendungsbereich sowie gegebenenfalls die in
-   \hyperref[itm:45-2b]{Absatz 2 Buchstabe b des vorliegenden Artikels} genannte Aufsichtsbehörde bzw. genannten
-   Aufsichtsbehörden angegeben. Der Durchführungsrechtsakt wird gemäß dem in \hyperref[itm:93-2]{Artikel 93 Absatz 2}
+   \hyperref[itm:45-2b]{Absatz 2 Buchstabe b des vorliegenden Artikels} genannte \hyperref[itm:04-21]{Aufsichtsbehörde} bzw. genannten
+   \hyperref[itm:04-21]{Aufsichtsbehörden} angegeben. Der Durchführungsrechtsakt wird gemäß dem in \hyperref[itm:93-2]{Artikel 93 Absatz 2}
    genannten Prüfverfahren erlassen.
   \label{itm:45-3}
 
