--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -13,7 +13,7 @@
   \label{itm:46-1}
 
   \item Die in \hyperref[itm:46-1]{Absatz 1} genannten geeigneten Garantien können, ohne dass hierzu eine besondere
-   Genehmigung einer Aufsichtsbehörde erforderlich wäre, bestehen in
+   Genehmigung einer \hyperref[itm:04-21]{Aufsichtsbehörde} erforderlich wäre, bestehen in
   \label{itm:46-2}
 
   \begin{enumerate}
@@ -28,7 +28,7 @@
      {Artikel 93 Absatz 2} erlassen werden,
     \label{itm:46-2c}
 
-    \item von einer Aufsichtsbehörde angenommenen Standarddatenschutzklauseln, die von der Kommission gemäß dem
+    \item von einer \hyperref[itm:04-21]{Aufsichtsbehörde} angenommenen Standarddatenschutzklauseln, die von der Kommission gemäß dem
      Prüfverfahren nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} genehmigt wurden,
     \label{itm:46-2d}
 
@@ -45,7 +45,7 @@
 
   \end{enumerate}
 
-  \item Vorbehaltlich der Genehmigung durch die zuständige Aufsichtsbehörde können die geeigneten Garantien gemäß
+  \item Vorbehaltlich der Genehmigung durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} können die geeigneten Garantien gemäß
    \hyperref[itm:46-1]{Absatz 1} auch insbesondere bestehen in
   \label{itm:46-3}
 
@@ -62,13 +62,13 @@
 
   \end{enumerate}
 
-  \item Die Aufsichtsbehörde wendet das Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63} an, wenn ein Fall gemäß
+  \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} wendet das Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63} an, wenn ein Fall gemäß
    \hyperref[itm:46-3]{Absatz 3 des vorliegenden Artikels} vorliegt.
   \label{itm:46-4}
 
-  \item Von einem Mitgliedstaat oder einer Aufsichtsbehörde auf der Grundlage von Artikel 26 Absatz 2 der Richtlinie
+  \item Von einem Mitgliedstaat oder einer \hyperref[itm:04-21]{Aufsichtsbehörde} auf der Grundlage von Artikel 26 Absatz 2 der Richtlinie
    95/46/EG\todo{nachschlagen} erteilte Genehmigungen bleiben so lange gültig, bis sie erforderlichenfalls von dieser
-   Aufsichtsbehörde geändert, ersetzt oder aufgehoben werden. Von der Kommission auf der Grundlage von Artikel 26
+   \hyperref[itm:04-21]{Aufsichtsbehörde} geändert, ersetzt oder aufgehoben werden. Von der Kommission auf der Grundlage von Artikel 26
    Absatz 4 der Richtlinie 95/46/EG erlassene Feststellungen bleiben so lange in Kraft, bis sie erforderlichenfalls mit
    einem nach \hyperref[itm:46-2]{Absatz 2 des vorliegenden Artikels} erlassenen Beschluss der Kommission geändert,
    ersetzt oder aufgehoben werden.
