--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Die zuständige Aufsichtsbehörde genehmigt gemäß dem Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63}
+  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} genehmigt gemäß dem Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63}
    \hyperref[itm:04-20]{verbindliche interne Datenschutzvorschriften}, sofern diese
   \label{itm:47-1}
 
@@ -55,7 +55,7 @@
      Wahrnehmung dieser Rechte einschließlich des Rechts, nicht einer ausschließlich auf einer automatisierten
      \hyperref[itm:04-2]{Verarbeitung} -- einschließlich \hyperref[itm:04-4]{Profiling} -- beruhenden Entscheidung nach \hyperref[ch:22]{Artikel 22} unterworfen
      zu werden sowie des in \hyperref[ch:79]{Artikel 79} niedergelegten Rechts auf Beschwerde bei der zuständigen
-     Aufsichtsbehörde beziehungsweise auf Einlegung eines Rechtsbehelfs bei den zuständigen Gerichten der
+     \hyperref[itm:04-21]{Aufsichtsbehörde} beziehungsweise auf Einlegung eines Rechtsbehelfs bei den zuständigen Gerichten der
      Mitgliedstaaten und im Falle einer Verletzung der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} Wiedergutmachung
      und gegebenenfalls Schadenersatz zu erhalten;
     \label{itm:47-2e}
@@ -88,20 +88,20 @@
      Schutz der Rechte der \hyperref[itm:04-1]{betroffenen Person}. Die Ergebnisse derartiger Überprüfungen sollten der in \hyperref
      [itm:47-2h]{Buchstabe h} genannten Person oder Einrichtung sowie dem Verwaltungsrat des herrschenden Unternehmens
      einer Unternehmensgruppe oder der Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben,
-     mitgeteilt werden und sollten der zuständigen Aufsichtsbehörde auf Anfrage zur Verfügung gestellt werden;
+     mitgeteilt werden und sollten der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} auf Anfrage zur Verfügung gestellt werden;
     \label{itm:47-2j}
 
     \item die Verfahren für die Meldung und Erfassung von Änderungen der Vorschriften und ihre Meldung an die
-     Aufsichtsbehörde;
+     \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:47-2k}
 
-    \item die Verfahren für die Zusammenarbeit mit der Aufsichtsbehörde, die die Befolgung der Vorschriften durch
+    \item die Verfahren für die Zusammenarbeit mit der \hyperref[itm:04-21]{Aufsichtsbehörde}, die die Befolgung der Vorschriften durch
      sämtliche Mitglieder der Unternehmensgruppe oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit
      ausüben, gewährleisten, insbesondere durch Offenlegung der Ergebnisse von Überprüfungen der unter \hyperref
-     [itm:47-2j]{Buchstabe j} genannten Maßnahmen gegenüber der Aufsichtsbehörde;
+     [itm:47-2j]{Buchstabe j} genannten Maßnahmen gegenüber der \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:47-2l}
 
-    \item die Meldeverfahren zur Unterrichtung der zuständigen Aufsichtsbehörde über jegliche für ein Mitglied der
+    \item die Meldeverfahren zur Unterrichtung der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} über jegliche für ein Mitglied der
      Unternehmensgruppe oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem
      Drittland geltenden rechtlichen Bestimmungen, die sich nachteilig auf die Garantien auswirken könnten, die die
      \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} bieten, und
@@ -115,7 +115,7 @@
 
   \item Die Kommission kann das Format und die Verfahren für den Informationsaustausch über \hyperref[itm:04-20]{verbindliche interne
    Datenschutzvorschriften} im Sinne des vorliegenden Artikels zwischen Verantwortlichen, Auftragsverarbeitern und
-   Aufsichtsbehörden festlegen. Diese Durchführungsrechtsakte werden gemäß dem Prüfverfahren nach \hyperref[itm:93-2]
+   \hyperref[itm:04-21]{Aufsichtsbehörden} festlegen. Diese Durchführungsrechtsakte werden gemäß dem Prüfverfahren nach \hyperref[itm:93-2]
    {Artikel 93 Absatz 2} erlassen.
   \label{itm:47-3}
 
