--- a/artikel/49.tex
+++ b/artikel/49.tex
@@ -55,7 +55,7 @@
   Verantwortlichen erforderlich ist, sofern die Interessen oder die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person} nicht
   überwiegen, und der Verantwortliche alle Umstände der Datenübermittlung beurteilt und auf der Grundlage dieser
   Beurteilung geeignete Garantien in Bezug auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} vorgesehen hat. Der Verantwortliche
-  setzt die Aufsichtsbehörde von der Übermittlung in Kenntnis. Der Verantwortliche unterrichtet die \hyperref[itm:04-1]{betroffene Person}
+  setzt die \hyperref[itm:04-21]{Aufsichtsbehörde} von der Übermittlung in Kenntnis. Der Verantwortliche unterrichtet die \hyperref[itm:04-1]{betroffene Person}
   über die Übermittlung und seine zwingenden berechtigten Interessen; dies erfolgt zusätzlich zu den der \hyperref[itm:04-1]{betroffenen
   Person} nach den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} mitgeteilten Informationen.
   \label{itm:49-1-2}
