--- a/artikel/53.tex
+++ b/artikel/53.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Die Mitgliedstaaten sehen vor, dass jedes Mitglied ihrer Aufsichtsbehörden im Wege eines transparenten
+  \item Die Mitgliedstaaten sehen vor, dass jedes Mitglied ihrer \hyperref[itm:04-21]{Aufsichtsbehörden} im Wege eines transparenten
    Verfahrens ernannt wird, und zwar
   \label{itm:53-1}
 
