--- a/artikel/57.tex
+++ b/artikel/57.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Unbeschadet anderer in dieser Verordnung dargelegter Aufgaben muss jede Aufsichtsbehörde in ihrem Hoheitsgebiet
+  \item Unbeschadet anderer in dieser Verordnung dargelegter Aufgaben muss jede \hyperref[itm:04-21]{Aufsichtsbehörde} in ihrem Hoheitsgebiet
 \label{itm:57-1}
 
   \begin{enumerate}
@@ -28,7 +28,7 @@
     \label{itm:57-1d}
 
     \item auf Anfrage jeder \hyperref[itm:04-1]{betroffenen Person} Informationen über die Ausübung ihrer Rechte aufgrund dieser Verordnung
-     zur Verfügung stellen und gegebenenfalls zu diesem Zweck mit den Aufsichtsbehörden in anderen Mitgliedstaaten
+     zur Verfügung stellen und gegebenenfalls zu diesem Zweck mit den \hyperref[itm:04-21]{Aufsichtsbehörden} in anderen Mitgliedstaaten
      zusammenarbeiten;
     \label{itm:57-1e}
 
@@ -36,15 +36,15 @@
      Verbandes gemäß \hyperref[ch:80]{Artikel 80} befassen, den Gegenstand der Beschwerde in angemessenem Umfang
      untersuchen und den Beschwerdeführer innerhalb einer angemessenen Frist über den Fortgang und das Ergebnis der
      Untersuchung unterrichten, insbesondere, wenn eine weitere Untersuchung oder Koordinierung mit einer anderen
-     Aufsichtsbehörde notwendig ist;
+     \hyperref[itm:04-21]{Aufsichtsbehörde} notwendig ist;
     \label{itm:57-1f}
 
-    \item mit anderen Aufsichtsbehörden zusammenarbeiten, auch durch Informationsaustausch, und ihnen Amtshilfe leisten,
+    \item mit anderen \hyperref[itm:04-21]{Aufsichtsbehörden} zusammenarbeiten, auch durch Informationsaustausch, und ihnen Amtshilfe leisten,
      um die einheitliche Anwendung und Durchsetzung dieser Verordnung zu gewährleisten;
     \label{itm:57-1g}
 
     \item Untersuchungen über die Anwendung dieser Verordnung durchführen, auch auf der Grundlage von Informationen
-     einer anderen Aufsichtsbehörde oder einer anderen Behörde;
+     einer anderen \hyperref[itm:04-21]{Aufsichtsbehörde} oder einer anderen Behörde;
     \label{itm:57-1h}
 
     \item maßgebliche Entwicklungen verfolgen, soweit sie sich auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} auswirken,
@@ -103,18 +103,18 @@
 
   \end{enumerate}
 
-  \item Jede Aufsichtsbehörde erleichtert das Einreichen von in \hyperref[itm:57-1f]{Absatz 1 Buchstabe f} genannten
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} erleichtert das Einreichen von in \hyperref[itm:57-1f]{Absatz 1 Buchstabe f} genannten
    Beschwerden durch Maßnahmen wie etwa die Bereitstellung eines Beschwerdeformulars, das auch elektronisch ausgefüllt
    werden kann, ohne dass andere Kommunikationsmittel ausgeschlossen werden.
   \label{itm:57-2}
 
-  \item Die Erfüllung der Aufgaben jeder Aufsichtsbehörde ist für die \hyperref[itm:04-1]{betroffene Person} und gegebenenfalls für den
+  \item Die Erfüllung der Aufgaben jeder \hyperref[itm:04-21]{Aufsichtsbehörde} ist für die \hyperref[itm:04-1]{betroffene Person} und gegebenenfalls für den
    Datenschutzbeauftragten unentgeltlich.
   \label{itm:57-3}
 
   \item Bei offenkundig unbegründeten oder -- insbesondere im Fall von häufiger Wiederholung -- exzessiven Anfragen kann
-   die Aufsichtsbehörde eine angemessene Gebühr auf der Grundlage der Verwaltungskosten verlangen oder sich weigern,
-   aufgrund der Anfrage tätig zu werden. In diesem Fall trägt die Aufsichtsbehörde die Beweislast für den offenkundig
+   die \hyperref[itm:04-21]{Aufsichtsbehörde} eine angemessene Gebühr auf der Grundlage der Verwaltungskosten verlangen oder sich weigern,
+   aufgrund der Anfrage tätig zu werden. In diesem Fall trägt die \hyperref[itm:04-21]{Aufsichtsbehörde} die Beweislast für den offenkundig
    unbegründeten oder exzessiven Charakter der Anfrage.
   \label{itm:57-4}
 
