--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Jede Aufsichtsbehörde verfügt über sämtliche folgenden Untersuchungsbefugnisse, die es ihr gestatten,
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} verfügt über sämtliche folgenden Untersuchungsbefugnisse, die es ihr gestatten,
   \label{itm:58-1}
 
   \begin{enumerate}
@@ -37,7 +37,7 @@
 
   \end{enumerate}
 
-  \item Jede Aufsichtsbehörde verfügt über sämtliche folgenden Abhilfebefugnisse, die es ihr gestatten,
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} verfügt über sämtliche folgenden Abhilfebefugnisse, die es ihr gestatten,
   \label{itm:58-2}
 
   \begin{enumerate}
@@ -88,7 +88,7 @@
 
   \end{enumerate}
 
-  \item Jede Aufsichtsbehörde verfügt über sämtliche folgenden Genehmigungsbefugnisse und beratenden Befugnisse, die es
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} verfügt über sämtliche folgenden Genehmigungsbefugnisse und beratenden Befugnisse, die es
    ihr gestatten,
   \label{itm:58-3}
 
@@ -133,17 +133,17 @@
 
   \end{enumerate}
 
-  \item Die Ausübung der der Aufsichtsbehörde gemäß diesem Artikel übertragenen Befugnisse erfolgt vorbehaltlich
+  \item Die Ausübung der der \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß diesem Artikel übertragenen Befugnisse erfolgt vorbehaltlich
    geeigneter Garantien einschließlich wirksamer gerichtlicher Rechtsbehelfe und ordnungsgemäßer Verfahren gemäß dem
    Unionsrecht und dem Recht des Mitgliedstaats im Einklang mit der Charta.
   \label{itm:58-4}
 
-  \item Jeder Mitgliedstaat sieht durch Rechtsvorschriften vor, dass seine Aufsichtsbehörde befugt ist, Verstöße gegen
+  \item Jeder Mitgliedstaat sieht durch Rechtsvorschriften vor, dass seine \hyperref[itm:04-21]{Aufsichtsbehörde} befugt ist, Verstöße gegen
    diese Verordnung den Justizbehörden zur Kenntnis zu bringen und gegebenenfalls die Einleitung eines gerichtlichen
    Verfahrens zu betreiben oder sich sonst daran zu beteiligen, um die Bestimmungen dieser Verordnung durchzusetzen.
   \label{itm:58-5}
 
-  \item Jeder Mitgliedstaat kann durch Rechtsvorschriften vorsehen, dass seine Aufsichtsbehörde neben den in den
+  \item Jeder Mitgliedstaat kann durch Rechtsvorschriften vorsehen, dass seine \hyperref[itm:04-21]{Aufsichtsbehörde} neben den in den
    Absätzen \hyperref[itm:58-1]{1}, \hyperref[itm:58-2]{2} und \hyperref[itm:58-3]{3} aufgeführten Befugnissen über
    zusätzliche Befugnisse verfügt. Die Ausübung dieser Befugnisse darf nicht die effektive Durchführung des \hyperref
    [part:7]{Kapitels VII} beeinträchtigen.
