--- a/artikel/64.tex
+++ b/artikel/64.tex
@@ -6,8 +6,8 @@
 
 \begin{enumerate}
 
-  \item Der Ausschuss gibt eine Stellungnahme ab, wenn die zuständige Aufsichtsbehörde beabsichtigt, eine der
-   nachstehenden Maßnahmen zu erlassen. Zu diesem Zweck übermittelt die zuständige Aufsichtsbehörde dem Ausschuss den
+  \item Der Ausschuss gibt eine Stellungnahme ab, wenn die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} beabsichtigt, eine der
+   nachstehenden Maßnahmen zu erlassen. Zu diesem Zweck übermittelt die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} dem Ausschuss den
    Entwurf des Beschlusses, wenn dieser
   \label{itm:64-1}
 
@@ -38,9 +38,9 @@
 
   \end{enumerate}
 
-  \item Jede Aufsichtsbehörde, der Vorsitz des Ausschuss oder die Kommission können beantragen, dass eine Angelegenheit
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde}, der Vorsitz des Ausschuss oder die Kommission können beantragen, dass eine Angelegenheit
    mit allgemeiner Geltung oder mit Auswirkungen in mehr als einem Mitgliedstaat vom Ausschuss geprüft wird, um eine
-   Stellungnahme zu erhalten, insbesondere wenn eine zuständige Aufsichtsbehörde den Verpflichtungen zur Amtshilfe
+   Stellungnahme zu erhalten, insbesondere wenn eine zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} den Verpflichtungen zur Amtshilfe
    gemäß \hyperref[ch:61]{Artikel 61} oder zu gemeinsamen Maßnahmen gemäß \hyperref[ch:62]{Artikel 62} nicht nachkommt.
   \label{itm:64-2}
 
@@ -54,7 +54,7 @@
    Beschlussentwurf zustimmt.
   \label{itm:64-3}
 
-  \item Die Aufsichtsbehörden und die Kommission übermitteln unverzüglich dem Ausschuss auf elektronischem Wege unter
+  \item Die \hyperref[itm:04-21]{Aufsichtsbehörden} und die Kommission übermitteln unverzüglich dem Ausschuss auf elektronischem Wege unter
    Verwendung eines standardisierten Formats alle zweckdienlichen Informationen, einschließlich -- je nach Fall --
    einer kurzen Darstellung des Sachverhalts, des Beschlussentwurfs, der Gründe, warum eine solche Maßnahme ergriffen
    werden muss, und der Standpunkte anderer \hyperref[itm:04-22]{betroffener Aufsichtsbehörden}.
@@ -70,17 +70,17 @@
      Übersetzungen der zweckdienlichen Informationen zur Verfügung und
     \label{itm:64-5a}
 
-    \item je nach Fall die in den Absätzen \hyperref[itm:64-1]{1} und \hyperref[itm:64-2]{2} genannte Aufsichtsbehörde
+    \item je nach Fall die in den Absätzen \hyperref[itm:64-1]{1} und \hyperref[itm:64-2]{2} genannte \hyperref[itm:04-21]{Aufsichtsbehörde}
      und die Kommission über die Stellungnahme und veröffentlicht sie.
     \label{itm:64-5b}
 
   \end{enumerate}
 
-  \item Die zuständige Aufsichtsbehörde nimmt den in \hyperref[itm:64-1]{Absatz 1} genannten Beschlussentwurf nicht vor
+  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} nimmt den in \hyperref[itm:64-1]{Absatz 1} genannten Beschlussentwurf nicht vor
    Ablauf der in \hyperref[itm:64-3]{Absatz 3} genannten Frist an.
   \label{itm:64-6}
 
-  \item Die in \hyperref[itm:64-1]{Absatz 1} genannte Aufsichtsbehörde trägt der Stellungnahme des Ausschusses
+  \item Die in \hyperref[itm:64-1]{Absatz 1} genannte \hyperref[itm:04-21]{Aufsichtsbehörde} trägt der Stellungnahme des Ausschusses
    weitestgehend Rechnung und teilt dessen Vorsitz binnen zwei Wochen nach Eingang der Stellungnahme auf elektronischem
    Wege unter Verwendung eines standardisierten Formats mit, ob sie den Beschlussentwurf beibehalten oder ändern wird;
    gegebenenfalls übermittelt sie den geänderten Beschlussentwurf.
