--- a/artikel/65.tex
+++ b/artikel/65.tex
@@ -23,7 +23,7 @@
      Hauptniederlassung zuständig ist,
     \label{itm:65-1b}
 
-    \item wenn eine zuständige Aufsichtsbehörde in den in \hyperref[itm:64-1]{Artikel 64 Absatz 1} genannten Fällen
+    \item wenn eine zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} in den in \hyperref[itm:64-1]{Artikel 64 Absatz 1} genannten Fällen
      keine Stellungnahme des Ausschusses einholt oder der Stellungnahme des Ausschusses gemäß \hyperref[ch:64]
      {Artikel 64} nicht folgt. In diesem Fall kann jede \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} oder die Kommission die
      Angelegenheit dem Ausschuss vorlegen.
@@ -34,7 +34,7 @@
   \item Der in \hyperref[itm:65-1]{Absatz 1} genannte Beschluss wird innerhalb eines Monats nach der Befassung mit der
    Angelegenheit mit einer Mehrheit von zwei Dritteln der Mitglieder des Ausschusses angenommen. Diese Frist kann wegen
    der Komplexität der Angelegenheit um einen weiteren Monat verlängert werden. Der in \hyperref[itm:65-1]{Absatz 1}
-   genannte Beschluss wird begründet und an die federführende Aufsichtsbehörde und alle \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden}
+   genannte Beschluss wird begründet und an die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} und alle \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden}
    übermittelt und ist für diese verbindlich.
   \label{itm:65-2}
 
@@ -50,14 +50,14 @@
 
   \item Der Vorsitz des Ausschusses unterrichtet die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} unverzüglich über den in \hyperref
    [itm:65-1]{Absatz 1} genannten Beschluss. Er setzt die Kommission hiervon in Kenntnis. Der Beschluss wird
-   unverzüglich auf der Website des Ausschusses veröffentlicht, nachdem die Aufsichtsbehörde den in \hyperref[itm:65-6]
+   unverzüglich auf der Website des Ausschusses veröffentlicht, nachdem die \hyperref[itm:04-21]{Aufsichtsbehörde} den in \hyperref[itm:65-6]
    {Absatz 6} genannten endgültigen Beschluss mitgeteilt hat.
   \label{itm:65-5}
 
-  \item Die federführende Aufsichtsbehörde oder gegebenenfalls die Aufsichtsbehörde, bei der die Beschwerde eingereicht
+  \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} oder gegebenenfalls die \hyperref[itm:04-21]{Aufsichtsbehörde}, bei der die Beschwerde eingereicht
    wurde, trifft den endgültigen Beschluss auf der Grundlage des in \hyperref[itm:65-1]{Absatz 1} des vorliegenden
    Artikels genannten Beschlusses unverzüglich und spätestens einen Monat, nachdem der Europäische Datenschutzausschuss
-   seinen Beschluss mitgeteilt hat. Die federführende Aufsichtsbehörde oder gegebenenfalls die Aufsichtsbehörde, bei
+   seinen Beschluss mitgeteilt hat. Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} oder gegebenenfalls die \hyperref[itm:04-21]{Aufsichtsbehörde}, bei
    der die Beschwerde eingereicht wurde, setzt den Ausschuss von dem Zeitpunkt, zu dem ihr endgültiger Beschluss dem
    Verantwortlichen oder dem Auftragsverarbeiter bzw. der \hyperref[itm:04-1]{betroffenen Person} mitgeteilt wird, in Kenntnis. Der
    endgültige Beschluss der \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} wird gemäß \hyperref[ch:60]{Artikel 60} Absätze \hyperref
