--- a/artikel/66.tex
+++ b/artikel/66.tex
@@ -10,19 +10,19 @@
    Artikel \hyperref[ch:63]{63}, \hyperref[ch:64]{64} und \hyperref[ch:65]{65} oder dem Verfahren nach \hyperref[ch:60]
    {Artikel 60} sofort einstweilige Maßnahmen mit festgelegter Geltungsdauer von höchstens drei Monaten treffen, die in
    ihrem Hoheitsgebiet rechtliche Wirkung entfalten sollen, wenn sie zu der Auffassung gelangt, dass dringender
-   Handlungsbedarf besteht, um Rechte und Freiheiten von \hyperref[itm:04-1]{betroffenen Personen} zu schützen. Die Aufsichtsbehörde setzt
+   Handlungsbedarf besteht, um Rechte und Freiheiten von \hyperref[itm:04-1]{betroffenen Personen} zu schützen. Die \hyperref[itm:04-21]{Aufsichtsbehörde} setzt
    die anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden}, den Ausschuss und die Kommission unverzüglich von diesen Maßnahmen und
    den Gründen für deren Erlass in Kenntnis.
   \label{itm:66-1}
 
-  \item Hat eine Aufsichtsbehörde eine Maßnahme nach \hyperref[itm:66-1]{Absatz 1} ergriffen und ist sie der Auffassung,
+  \item Hat eine \hyperref[itm:04-21]{Aufsichtsbehörde} eine Maßnahme nach \hyperref[itm:66-1]{Absatz 1} ergriffen und ist sie der Auffassung,
    dass dringend endgültige Maßnahmen erlassen werden müssen, kann sie unter Angabe von Gründen im
    Dringlichkeitsverfahren um eine Stellungnahme oder einen verbindlichen Beschluss des Ausschusses ersuchen.
   \label{itm:66-2}
 
-  \item Jede Aufsichtsbehörde kann unter Angabe von Gründen, auch für den dringenden Handlungsbedarf, im
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} kann unter Angabe von Gründen, auch für den dringenden Handlungsbedarf, im
    Dringlichkeitsverfahren um eine Stellungnahme oder gegebenenfalls einen verbindlichen Beschluss des Ausschusses
-   ersuchen, wenn eine zuständige Aufsichtsbehörde trotz dringenden Handlungsbedarfs keine geeignete Maßnahme getroffen
+   ersuchen, wenn eine zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} trotz dringenden Handlungsbedarfs keine geeignete Maßnahme getroffen
    hat, um die Rechte und Freiheiten von \hyperref[itm:04-1]{betroffenen Personen} zu schützen.
   \label{itm:66-3}
 
