--- a/artikel/68.tex
+++ b/artikel/68.tex
@@ -13,11 +13,11 @@
   \item Der Ausschuss wird von seinem Vorsitz vertreten.
   \label{itm:68-2}
 
-  \item Der Ausschuss besteht aus dem Leiter einer Aufsichtsbehörde jedes Mitgliedstaats und dem Europäischen
+  \item Der Ausschuss besteht aus dem Leiter einer \hyperref[itm:04-21]{Aufsichtsbehörde} jedes Mitgliedstaats und dem Europäischen
    Datenschutzbeauftragten oder ihren jeweiligen Vertretern.
   \label{itm:68-3}
 
-  \item Ist in einem Mitgliedstaat mehr als eine Aufsichtsbehörde für die Überwachung der Anwendung der nach Maßgabe
+  \item Ist in einem Mitgliedstaat mehr als eine \hyperref[itm:04-21]{Aufsichtsbehörde} für die Überwachung der Anwendung der nach Maßgabe
    dieser Verordnung erlassenen Vorschriften zuständig, so wird im Einklang mit den Rechtsvorschriften dieses
    Mitgliedstaats ein gemeinsamer Vertreter benannt.
   \label{itm:68-4}
