--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -14,7 +14,7 @@
   
     \item Überwachung und Sicherstellung der ordnungsgemäßen Anwendung dieser Verordnung in den in den Artikeln
      \hyperref[ch:64]{64} und \hyperref[ch:65]{65} genannten Fällen unbeschadet der Aufgaben der nationalen
-      Aufsichtsbehörden;
+      \hyperref[itm:04-21]{Aufsichtsbehörden};
     \label{itm:70-1a}
 
     \item Beratung der Kommission in allen Fragen, die im Zusammenhang mit dem Schutz \hyperref[itm:04-1]{personenbezogener Daten} in der
@@ -22,7 +22,7 @@
     \label{itm:70-1b}
 
     \item Beratung der Kommission über das Format und die Verfahren für den Austausch von Informationen zwischen den
-     Verantwortlichen, den Auftragsverarbeitern und den Aufsichtsbehörden in Bezug auf \hyperref[itm:04-20]{verbindliche interne
+     Verantwortlichen, den Auftragsverarbeitern und den \hyperref[itm:04-21]{Aufsichtsbehörden} in Bezug auf \hyperref[itm:04-20]{verbindliche interne
      Datenschutzvorschriften};
     \label{itm:70-1c}
 
@@ -66,7 +66,7 @@
      \hyperref[itm:04-1]{personenbezogener Daten} gemäß \hyperref[itm:49-1-1]{Artikel 49 Absatz 1};
     \label{itm:70-1j}
 
-    \item Ausarbeitung von Leitlinien für die Aufsichtsbehörden in Bezug auf die Anwendung von Maßnahmen nach \hyperref
+    \item Ausarbeitung von Leitlinien für die \hyperref[itm:04-21]{Aufsichtsbehörden} in Bezug auf die Anwendung von Maßnahmen nach \hyperref
      [ch:58]{Artikel 58} Absätze \hyperref[itm:58-1]{1}, \hyperref[itm:58-2]{2} und \hyperref[itm:58-3]{3} und die
      Festsetzung von Geldbußen gemäß \hyperref[ch:83]{Artikel 83};
     \label{itm:70-1k}
@@ -112,28 +112,28 @@
     \label{itm:70-1s}
 
     \item Abgabe von Stellungnahmen im Kohärenzverfahren gemäß \hyperref[itm:64-1]{Artikel 64 Absatz 1} zu
-     Beschlussentwürfen von Aufsichtsbehörden, zu Angelegenheiten, die nach \hyperref[itm:64-2]{Artikel 64 Absatz 2}
+     Beschlussentwürfen von \hyperref[itm:04-21]{Aufsichtsbehörden}, zu Angelegenheiten, die nach \hyperref[itm:64-2]{Artikel 64 Absatz 2}
      vorgelegt wurden und um Erlass verbindlicher Beschlüsse gemäß \hyperref[ch:65]{Artikel 65}, einschließlich der
      in \hyperref[ch:66]{Artikel 66} genannten Fälle;
     \label{itm:70-1t}
 
     \item Förderung der Zusammenarbeit und eines wirksamen bilateralen und multilateralen Austauschs von Informationen
-     und bewährten Verfahren zwischen den Aufsichtsbehörden;
+     und bewährten Verfahren zwischen den \hyperref[itm:04-21]{Aufsichtsbehörden};
     \label{itm:70-1u}
 
-    \item Förderung von Schulungsprogrammen und Erleichterung des Personalaustausches zwischen Aufsichtsbehörden sowie
-     gegebenenfalls mit Aufsichtsbehörden von Drittländern oder mit internationalen Organisationen;
+    \item Förderung von Schulungsprogrammen und Erleichterung des Personalaustausches zwischen \hyperref[itm:04-21]{Aufsichtsbehörden} sowie
+     gegebenenfalls mit \hyperref[itm:04-21]{Aufsichtsbehörden} von Drittländern oder mit internationalen Organisationen;
     \label{itm:70-1v}
 
     \item Förderung des Austausches von Fachwissen und von Dokumentationen über Datenschutzvorschriften und -praxis mit
-     Datenschutzaufsichtsbehörden in aller Welt;
+     Datenschutz\hyperref[itm:04-21]{aufsichtsbehörden} in aller Welt;
     \label{itm:70-1w}
 
     \item Abgabe von Stellungnahmen zu den auf Unionsebene erarbeiteten Verhaltensregeln gemäß \hyperref[itm:40-9]
      {Artikel 40 Absatz 9} und
     \label{itm:70-1x}
 
-    \item Führung eines öffentlich zugänglichen elektronischen Registers der Beschlüsse der Aufsichtsbehörden und
+    \item Führung eines öffentlich zugänglichen elektronischen Registers der Beschlüsse der \hyperref[itm:04-21]{Aufsichtsbehörden} und
      Gerichte in Bezug auf Fragen, die im Rahmen des Kohärenzverfahrens behandelt wurden.
     \label{itm:70-1y}
 
