--- a/artikel/75.tex
+++ b/artikel/75.tex
@@ -51,7 +51,7 @@
     \label{itm:75-6f}
 
     \item die Vorbereitung, Abfassung und Veröffentlichung von Stellungnahmen, von Beschlüssen über die Beilegung von
-     Streitigkeiten zwischen Aufsichtsbehörden und von sonstigen vom Ausschuss angenommenen Dokumenten.
+     Streitigkeiten zwischen \hyperref[itm:04-21]{Aufsichtsbehörden} und von sonstigen vom Ausschuss angenommenen Dokumenten.
     \label{itm:75-6g}
 
   \end{enumerate}
