--- a/artikel/77.tex
+++ b/artikel/77.tex
@@ -7,12 +7,12 @@
 \begin{enumerate}
 
   \item Jede \hyperref[itm:04-1]{betroffene Person} hat unbeschadet eines anderweitigen verwaltungsrechtlichen oder gerichtlichen
-   Rechtsbehelfs das Recht auf Beschwerde bei einer Aufsichtsbehörde, insbesondere in dem Mitgliedstaat ihres
+   Rechtsbehelfs das Recht auf Beschwerde bei einer \hyperref[itm:04-21]{Aufsichtsbehörde}, insbesondere in dem Mitgliedstaat ihres
    Aufenthaltsorts, ihres Arbeitsplatzes oder des Orts des mutmaßlichen Verstoßes, wenn die \hyperref[itm:04-1]{betroffene Person} der
    Ansicht ist, dass die \hyperref[itm:04-2]{Verarbeitung} der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} gegen diese Verordnung verstößt.
   \label{itm:77-1}
 
-  \item Die Aufsichtsbehörde, bei der die Beschwerde eingereicht wurde, unterrichtet den Beschwerdeführer über den Stand
+  \item Die \hyperref[itm:04-21]{Aufsichtsbehörde}, bei der die Beschwerde eingereicht wurde, unterrichtet den Beschwerdeführer über den Stand
    und die Ergebnisse der Beschwerde einschließlich der Möglichkeit eines gerichtlichen Rechtsbehelfs nach \hyperref
    [ch:78]{Artikel 78}.
   \label{itm:77-2}
