--- a/artikel/80.tex
+++ b/artikel/80.tex
@@ -17,7 +17,7 @@
 
   \item Die Mitgliedstaaten können vorsehen, dass jede der in \hyperref[itm:80-1]{Absatz 1 des vorliegenden Artikels}
    genannten Einrichtungen, Organisationen oder Vereinigungen unabhängig von einem Auftrag der \hyperref[itm:04-1]{betroffenen Person} in
-   diesem Mitgliedstaat das Recht hat, bei der gemäß \hyperref[ch:77]{Artikel 77} zuständigen Aufsichtsbehörde eine
+   diesem Mitgliedstaat das Recht hat, bei der gemäß \hyperref[ch:77]{Artikel 77} zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} eine
    Beschwerde einzulegen und die in den Artikeln \hyperref[ch:78]{78} und \hyperref[ch:79]{79} aufgeführten Rechte in
    Anspruch zu nehmen, wenn ihres Erachtens die Rechte einer \hyperref[itm:04-1]{betroffenen Person} gemäß dieser Verordnung infolge einer
    \hyperref[itm:04-2]{Verarbeitung} verletzt worden sind.
