--- a/artikel/83.tex
+++ b/artikel/83.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Jede Aufsichtsbehörde stellt sicher, dass die Verhängung von Geldbußen gemäß diesem Artikel für Verstöße gegen
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} stellt sicher, dass die Verhängung von Geldbußen gemäß diesem Artikel für Verstöße gegen
    diese Verordnung gemäß den Absätzen \hyperref[itm:83-5]{5} und \hyperref[itm:83-6]{6} in jedem Einzelfall wirksam,
    verhältnismäßig und abschreckend ist.
   \label{itm:83-1}
@@ -39,14 +39,14 @@
     \item etwaige einschlägige frühere Verstöße des Verantwortlichen oder des Auftragsverarbeiters;
     \label{itm:83-2e}
 
-    \item Umfang der Zusammenarbeit mit der Aufsichtsbehörde, um dem Verstoß abzuhelfen und seine möglichen nachteiligen
+    \item Umfang der Zusammenarbeit mit der \hyperref[itm:04-21]{Aufsichtsbehörde}, um dem Verstoß abzuhelfen und seine möglichen nachteiligen
      Auswirkungen zu mindern;
     \label{itm:83-2f}
 
     \item Kategorien \hyperref[itm:04-1]{personenbezogener Daten}, die von dem Verstoß betroffen sind;
     \label{itm:83-2g}
 
-    \item Art und Weise, wie der Verstoß der Aufsichtsbehörde bekannt wurde, insbesondere ob und gegebenenfalls in
+    \item Art und Weise, wie der Verstoß der \hyperref[itm:04-21]{Aufsichtsbehörde} bekannt wurde, insbesondere ob und gegebenenfalls in
      welchem Umfang der Verantwortliche oder der Auftragsverarbeiter den Verstoß mitgeteilt hat;
     \label{itm:83-2h}
 
@@ -112,32 +112,32 @@
     \label{itm:83-5d}
 
     \item Nichtbefolgung einer Anweisung oder einer vorübergehenden oder endgültigen Beschränkung oder Aussetzung der
-     Datenübermittlung durch die Aufsichtsbehörde gemäß \hyperref[itm:58-2]{Artikel 58 Absatz 2} oder Nichtgewährung
+     Datenübermittlung durch die \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß \hyperref[itm:58-2]{Artikel 58 Absatz 2} oder Nichtgewährung
      des Zugangs unter Verstoß gegen \hyperref[itm:58-1]{Artikel 58 Absatz 1}.
     \label{itm:83-5e}
 
   \end{enumerate}
 
-  \item Bei Nichtbefolgung einer Anweisung der Aufsichtsbehörde gemäß \hyperref[itm:58-2]{Artikel 58 Absatz 2} werden im
+  \item Bei Nichtbefolgung einer Anweisung der \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß \hyperref[itm:58-2]{Artikel 58 Absatz 2} werden im
    Einklang mit \hyperref[itm:83-2]{Absatz 2 des vorliegenden Artikels} Geldbußen von bis zu 20~000~000~EUR oder im
    Fall eines Unternehmens von bis zu 4~\% seines gesamten weltweit erzielten Jahresumsatzes des vorangegangenen
    Geschäftsjahrs verhängt, je nachdem, welcher der Beträge höher ist.
   \label{itm:83-6}
 
-  \item Unbeschadet der Abhilfebefugnisse der Aufsichtsbehörden gemäß \hyperref[itm:58-2]{Artikel 58 Absatz 2} kann
+  \item Unbeschadet der Abhilfebefugnisse der \hyperref[itm:04-21]{Aufsichtsbehörden} gemäß \hyperref[itm:58-2]{Artikel 58 Absatz 2} kann
    jeder Mitgliedstaat Vorschriften dafür festlegen, ob und in welchem Umfang gegen Behörden und öffentliche Stellen,
    die in dem betreffenden Mitgliedstaat niedergelassen sind, Geldbußen verhängt werden können.
   \label{itm:83-7}
 
-  \item Die Ausübung der eigenen Befugnisse durch eine Aufsichtsbehörde gemäß diesem Artikel muss angemessenen
+  \item Die Ausübung der eigenen Befugnisse durch eine \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß diesem Artikel muss angemessenen
    Verfahrensgarantien gemäß dem Unionsrecht und dem Recht der Mitgliedstaaten, einschließlich wirksamer gerichtlicher
    Rechtsbehelfe und ordnungsgemäßer Verfahren, unterliegen.
   \label{itm:83-8}
 
   \item Sieht die Rechtsordnung eines Mitgliedstaats keine Geldbußen vor, kann dieser Artikel so angewandt werden, dass
-   die Geldbuße von der zuständigen Aufsichtsbehörde in die Wege geleitet und von den zuständigen nationalen Gerichten
+   die Geldbuße von der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} in die Wege geleitet und von den zuständigen nationalen Gerichten
    verhängt wird, wobei sicherzustellen ist, dass diese Rechtsbehelfe wirksam sind und die gleiche Wirkung wie die von
-   Aufsichtsbehörden verhängten Geldbußen haben. In jeden Fall müssen die verhängten Geldbußen wirksam, verhältnismäßig
+   \hyperref[itm:04-21]{Aufsichtsbehörden} verhängten Geldbußen haben. In jeden Fall müssen die verhängten Geldbußen wirksam, verhältnismäßig
    und abschreckend sein. Die betreffenden Mitgliedstaaten teilen der Kommission bis zum 25. Mai 2018 die
    Rechtsvorschriften mit, die sie aufgrund dieses Absatzes erlassen, sowie unverzüglich alle späteren Änderungsgesetze
    oder Änderungen dieser Vorschriften.
