--- a/artikel/85.tex
+++ b/artikel/85.tex
@@ -16,7 +16,7 @@
    {Kapitel II} (Grundsätze), \hyperref[part:3]{Kapitel III} (Rechte der \hyperref[itm:04-1]{betroffenen Person}), \hyperref[part:4]
    {Kapitel IV}(Verantwortlicher und Auftragsverarbeiter), \hyperref[part:5]{Kapitel V} (Übermittlung personenbezogener
    Daten an Drittländer oder an \hyperref[itm:04-29]{internationale Organisationen}), \hyperref[part:6]{Kapitel VI}
-   (Unabhängige Aufsichtsbehörden), \hyperref[part:7]{Kapitel VII}(Zusammenarbeit und Kohärenz) und \hyperref[part:9]
+   (Unabhängige \hyperref[itm:04-21]{Aufsichtsbehörden}), \hyperref[part:7]{Kapitel VII}(Zusammenarbeit und Kohärenz) und \hyperref[part:9]
    {Kapitel IX} (Vorschriften für besondere Verarbeitungssituationen) vor, wenn dies erforderlich ist, um das Recht auf
    Schutz der \hyperref[itm:04-1]{personenbezogenen Daten} mit der Freiheit der Meinungsäußerung und der Informationsfreiheit in Einklang zu
    bringen.
