--- a/artikel/90.tex
+++ b/artikel/90.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Die Mitgliedstaaten können die Befugnisse der Aufsichtsbehörden im Sinne des \hyperref[itm:58-1]{Artikels 58
+  \item Die Mitgliedstaaten können die Befugnisse der \hyperref[itm:04-21]{Aufsichtsbehörden} im Sinne des \hyperref[itm:58-1]{Artikels 58
    Absatz 1} Buchstaben \hyperref[itm:58-1e]{e} und \hyperref[itm:58-1f]{f} gegenüber den Verantwortlichen oder den
    Auftragsverarbeitern, die nach Unionsrecht oder dem Recht der Mitgliedstaaten oder nach einer von den zuständigen
    nationalen Stellen erlassenen Verpflichtung dem Berufsgeheimnis oder einer gleichwertigen Geheimhaltungspflicht
