--- a/artikel/91.tex
+++ b/artikel/91.tex
@@ -12,7 +12,7 @@
   \label{itm:91-1}
 
   \item Kirchen und religiöse Vereinigungen oder Gemeinschaften, die gemäß \hyperref[itm:91-1]{Absatz 1} umfassende
-   Datenschutzregeln anwenden, unterliegen der Aufsicht durch eine unabhängige Aufsichtsbehörde, die spezifischer Art
+   Datenschutzregeln anwenden, unterliegen der Aufsicht durch eine unabhängige \hyperref[itm:04-21]{Aufsichtsbehörde}, die spezifischer Art
    sein kann, sofern sie die in \hyperref[part:6]{Kapitel VI} niedergelegten Bedingungen erfüllt.
   \label{itm:91-2}
    
