--- a/artikel/97.tex
+++ b/artikel/97.tex
@@ -29,7 +29,7 @@
   \end{enumerate}
 
   \item Für den in \hyperref[itm:97-1]{Absatz 1} genannten Zweck kann die Kommission Informationen von den
-   Mitgliedstaaten und den Aufsichtsbehörden anfordern.
+   Mitgliedstaaten und den \hyperref[itm:04-21]{Aufsichtsbehörden} anfordern.
   \label{itm:97-3}
 
   \item Bei den in den Absätzen \hyperref[itm:97-1]{1} und \hyperref[itm:97-2]{2} genannten Bewertungen und
