--- a/artikel/13.tex
+++ b/artikel/13.tex
@@ -60,7 +60,7 @@
      dass die Rechtmäßigkeit der aufgrund der Einwilligung bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} berührt wird;
     \label{itm:13-2c}
 
-    \item das Bestehen eines Beschwerderechts bei einer Aufsichtsbehörde;
+    \item das Bestehen eines Beschwerderechts bei einer \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:13-2d}
 
     \item ob die Bereitstellung der \hyperref[itm:04-1]{personenbezogenen Daten} gesetzlich oder vertraglich vorgeschrieben oder für einen
