--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -72,7 +72,7 @@
   \label{itm:30-3}
 
   \item Der Verantwortliche oder der Auftragsverarbeiter sowie gegebenenfalls der Vertreter des Verantwortlichen oder
-   des Auftragsverarbeiters stellen der Aufsichtsbehörde das Verzeichnis auf Anfrage zur Verfügung.
+   des Auftragsverarbeiters stellen der \hyperref[itm:04-21]{Aufsichtsbehörde} das Verzeichnis auf Anfrage zur Verfügung.
   \label{itm:30-4}
 
   \item Die in den Absätzen \hyperref[itm:30-1]{1} und \hyperref[itm:30-2]{2} genannten Pflichten gelten nicht für
