--- a/artikel/41.tex
+++ b/artikel/41.tex
@@ -6,10 +6,10 @@
 
 \begin{enumerate}
 
-  \item Unbeschadet der Aufgaben und Befugnisse der zuständigen Aufsichtsbehörde gemäß den Artikeln \hyperref[ch:57]
+  \item Unbeschadet der Aufgaben und Befugnisse der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß den Artikeln \hyperref[ch:57]
    {57} und \hyperref[ch:58]{58} kann die Überwachung der Einhaltung von Verhaltensregeln gemäß \hyperref[ch:40]
    {Artikel 40} von einer Stelle durchgeführt werden, die über das geeignete Fachwissen hinsichtlich des Gegenstands
-   der Verhaltensregeln verfügt und die von der zuständigen Aufsichtsbehörde zu diesem Zweck akkreditiert wurde.
+   der Verhaltensregeln verfügt und die von der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} zu diesem Zweck akkreditiert wurde.
   \label{itm:41-1}
 
   \item Eine Stelle gemäß \hyperref[itm:41-1]{Absatz 1} kann zum Zwecke der Überwachung der Einhaltung von
@@ -19,7 +19,7 @@
   \begin{enumerate}
   
     \item ihre Unabhängigkeit und ihr Fachwissen hinsichtlich des Gegenstands der Verhaltensregeln zur Zufriedenheit der
-     zuständigen Aufsichtsbehörde nachgewiesen hat;
+     zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} nachgewiesen hat;
     \label{itm:41-2a}
 
     \item Verfahren festgelegt hat, die es ihr ermöglichen, zu bewerten, ob Verantwortliche und Auftragsverarbeiter die
@@ -33,25 +33,25 @@
      Öffentlichkeit transparent macht, und
     \label{itm:41-2c}
 
-    \item zur Zufriedenheit der zuständigen Aufsichtsbehörde nachgewiesen hat, dass ihre Aufgaben und Pflichten nicht zu
+    \item zur Zufriedenheit der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} nachgewiesen hat, dass ihre Aufgaben und Pflichten nicht zu
      einem Interessenkonflikt führen.
     \label{itm:41-2d}
 
   \end{enumerate}
 
-  \item Die zuständige Aufsichtsbehörde übermittelt den Entwurf der Kriterien für die Akkreditierung einer Stelle nach
+  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt den Entwurf der Kriterien für die Akkreditierung einer Stelle nach
    \hyperref[itm:41-1]{Absatz 1} gemäß dem Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63} an den Ausschuss.
   \label{itm:41-3}
 
-  \item Unbeschadet der Aufgaben und Befugnisse der zuständigen Aufsichtsbehörde und der Bestimmungen des \hyperref
+  \item Unbeschadet der Aufgaben und Befugnisse der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} und der Bestimmungen des \hyperref
    [part:8]{Kapitels VIII} ergreift eine Stelle gemäß \hyperref[itm:41-1]{Absatz 1} vorbehaltlich geeigneter Garantien
    im Falle einer Verletzung der Verhaltensregeln durch einen Verantwortlichen oder einen Auftragsverarbeiter geeignete
    Maßnahmen, einschließlich eines vorläufigen oder endgültigen Ausschlusses des Verantwortlichen oder
-   Auftragsverarbeiters von den Verhaltensregeln. Sie unterrichtet die zuständige Aufsichtsbehörde über solche
+   Auftragsverarbeiters von den Verhaltensregeln. Sie unterrichtet die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} über solche
    Maßnahmen und deren Begründung.
   \label{itm:41-4}
 
-  \item Die zuständige Aufsichtsbehörde widerruft die Akkreditierung einer Stelle gemäß \hyperref[itm:41-1]{Absatz 1},
+  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} widerruft die Akkreditierung einer Stelle gemäß \hyperref[itm:41-1]{Absatz 1},
    wenn die Voraussetzungen für ihre Akkreditierung nicht oder nicht mehr erfüllt sind oder wenn die Stelle Maßnahmen
    ergreift, die nicht mit dieser Verordnung vereinbar sind.
   \label{itm:41-5}
