--- a/artikel/43.tex
+++ b/artikel/43.tex
@@ -6,9 +6,9 @@
 
 \begin{enumerate}
 
-  \item Unbeschadet der Aufgaben und Befugnisse der zuständigen Aufsichtsbehörde gemäß den Artikeln \hyperref[ch:57]
+  \item Unbeschadet der Aufgaben und Befugnisse der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß den Artikeln \hyperref[ch:57]
    {57} und \hyperref[ch:58]{58} erteilen oder verlängern Zertifizierungsstellen, die über das geeignete Fachwissen
-   hinsichtlich des Datenschutzes verfügen, nach Unterrichtung der Aufsichtsbehörde -- damit diese erforderlichenfalls
+   hinsichtlich des Datenschutzes verfügen, nach Unterrichtung der \hyperref[itm:04-21]{Aufsichtsbehörde} -- damit diese erforderlichenfalls
    von ihren Befugnissen gemäß \hyperref[itm:58-2h]{Artikel 58 Absatz 2 Buchstabe h} Gebrauch machen kann -- die
    Zertifizierung. Die Mitgliedstaaten stellen sicher, dass diese Zertifizierungsstellen von einer oder beiden der
    folgenden Stellen akkreditiert werden:
@@ -16,12 +16,12 @@
 
   \begin{enumerate}
   
-    \item der gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständigen Aufsichtsbehörde;
+    \item der gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:43-1a}
 
     \item der nationalen Akkreditierungsstelle, die gemäß der Verordnung (EG) Nr. 765/2008 des Europäischen Parlaments
      und des Rate im Einklang mit EN-ISO/IEC 17065/2012 und mit den zusätzlichen von der gemäß
-     Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständigen Aufsichtsbehörde festgelegten Anforderungen
+     Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} festgelegten Anforderungen
      benannt wurde.\todo{Verordnungen nachschlagen}
     \label{itm:43-1b}
 
@@ -34,11 +34,11 @@
   \begin{enumerate}
   
     \item ihre Unabhängigkeit und ihr Fachwissen hinsichtlich des Gegenstands der Zertifizierung zur Zufriedenheit der
-     zuständigen Aufsichtsbehörde nachgewiesen haben;
+     zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} nachgewiesen haben;
     \label{itm:43-2a}
 
     \item sich verpflichtet haben, die Kriterien nach \hyperref[itm:42-5]{Artikel 42 Absatz 5}, die von der gemäß
-     Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständigen Aufsichtsbehörde oder -- gemäß \hyperref[ch:63]
+     Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} oder -- gemäß \hyperref[ch:63]
      {Artikel 63} -- von dem Ausschuss genehmigt wurden, einzuhalten;
     \label{itm:43-2b}
 
@@ -52,7 +52,7 @@
      transparent machen, und
     \label{itm:43-2d}
 
-    \item zur Zufriedenheit der zuständigen Aufsichtsbehörde nachgewiesen haben, dass ihre Aufgaben und Pflichten nicht
+    \item zur Zufriedenheit der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} nachgewiesen haben, dass ihre Aufgaben und Pflichten nicht
      zu einem Interessenkonflikt führen.
     \label{itm:43-2e}
 
@@ -60,7 +60,7 @@
 
   \item Die Akkreditierung von Zertifizierungsstellen nach den Absätzen \hyperref[itm:43-1]{1} und \hyperref[itm:43-2]
    {2} erfolgt anhand der Kriterien, die von der gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]
-   {56} zuständigen Aufsichtsbehörde oder -- gemäß \hyperref[ch:63]{Artikel 63} -- von dem Ausschuss genehmigt wurden.
+   {56} zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} oder -- gemäß \hyperref[ch:63]{Artikel 63} -- von dem Ausschuss genehmigt wurden.
    Im Fall einer Akkreditierung nach \hyperref[itm:43-1b]{Absatz 1 Buchstabe b des vorliegenden Artikels} ergänzen
    diese Anforderungen diejenigen, die in der Verordnung (EG) Nr. 765/2008\todo{Verordnung nachschlagen} und in den
    technischen Vorschriften, in denen die Methoden und Verfahren der Zertifizierungsstellen beschrieben werden,
@@ -74,17 +74,17 @@
    werden, sofern die Zertifizierungsstelle die Anforderungen dieses Artikels erfüllt.
   \label{itm:43-4}
 
-  \item Die Zertifizierungsstellen nach \hyperref[itm:43-1]{Absatz 1} teilen den zuständigen Aufsichtsbehörden die
+  \item Die Zertifizierungsstellen nach \hyperref[itm:43-1]{Absatz 1} teilen den zuständigen \hyperref[itm:04-21]{Aufsichtsbehörden} die
    Gründe für die Erteilung oder den Widerruf der beantragten Zertifizierung mit.
   \label{itm:43-5}
 
   \item Die Anforderungen nach \hyperref[itm:43-3]{Absatz 3 des vorliegenden Artikels} und die Kriterien nach A\hyperref
-   [itm:42-5]{rtikel 42 Absatz 5} werden von der Aufsichtsbehörde in leicht zugänglicher Form veröffentlicht. Die
-   Aufsichtsbehörden übermitteln diese Anforderungen und Kriterien auch dem Ausschuss. Der Ausschuss nimmt alle
+   [itm:42-5]{rtikel 42 Absatz 5} werden von der \hyperref[itm:04-21]{Aufsichtsbehörde} in leicht zugänglicher Form veröffentlicht. Die
+   \hyperref[itm:04-21]{Aufsichtsbehörden} übermitteln diese Anforderungen und Kriterien auch dem Ausschuss. Der Ausschuss nimmt alle
    Zertifizierungsverfahren und Datenschutzsiegel in ein Register auf und veröffentlicht sie in geeigneter Weise.
   \label{itm:43-6}
 
-  \item Unbeschadet des \hyperref[part:8]{Kapitels VIII} widerruft die zuständige Aufsichtsbehörde oder die nationale
+  \item Unbeschadet des \hyperref[part:8]{Kapitels VIII} widerruft die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} oder die nationale
    Akkreditierungsstelle die Akkreditierung einer Zertifizierungsstelle nach \hyperref[itm:43-1]{Absatz 1}, wenn die
    Voraussetzungen für die Akkreditierung nicht oder nicht mehr erfüllt sind oder wenn eine Zertifizierungsstelle
    Maßnahmen ergreift, die nicht mit dieser Verordnung vereinbar sind.
