--- a/artikel/60.tex
+++ b/artikel/60.tex
@@ -6,68 +6,68 @@
 
 \begin{enumerate}
 
-  \item Die federführende Aufsichtsbehörde arbeitet mit den anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} im Einklang mit diesem
-   Artikel zusammen und bemüht sich dabei, einen Konsens zu erzielen. Die federführende Aufsichtsbehörde und die
+  \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} arbeitet mit den anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} im Einklang mit diesem
+   Artikel zusammen und bemüht sich dabei, einen Konsens zu erzielen. Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} und die
    \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} tauschen untereinander alle zweckdienlichen Informationen aus.
   \label{itm:60-1}
 
-  \item Die federführende Aufsichtsbehörde kann jederzeit andere \hyperref[itm:04-22]{betroffene Aufsichtsbehörden} um Amtshilfe gemäß
+  \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} kann jederzeit andere \hyperref[itm:04-22]{betroffene Aufsichtsbehörden} um Amtshilfe gemäß
   \hyperref[ch:61]{Artikel 61} ersuchen und gemeinsame Maßnahmen gemäß \hyperref[ch:62]{Artikel 62} durchführen,
    insbesondere zur Durchführung von Untersuchungen oder zur Überwachung der Umsetzung einer Maßnahme in Bezug auf
    einen Verantwortlichen oder einen Auftragsverarbeiter, der in einem anderen Mitgliedstaat niedergelassen ist.
   \label{itm:60-2}
 
-  \item Die federführende Aufsichtsbehörde übermittelt den anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} unverzüglich die
+  \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt den anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} unverzüglich die
    zweckdienlichen Informationen zu der Angelegenheit. Sie legt den anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} unverzüglich
    einen Beschlussentwurf zur Stellungnahme vor und trägt deren Standpunkten gebührend Rechnung.
   \label{itm:60-3}
 
   \item Legt eine der anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} innerhalb von vier Wochen, nachdem sie gemäß \hyperref
    [itm:60-3]{Absatz 3 des vorliegenden Artikels} konsultiert wurde, gegen diesen Beschlussentwurf einen \hyperref[itm:04-27]{maßgeblichen
-   und begründeten Einspruch} ein und schließt sich die federführende Aufsichtsbehörde dem \hyperref[itm:04-27]{maßgeblichen und begründeten
+   und begründeten Einspruch} ein und schließt sich die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} dem \hyperref[itm:04-27]{maßgeblichen und begründeten
    Einspruch} nicht an oder ist der Ansicht, dass der Einspruch nicht maßgeblich oder nicht begründet ist, so leitet die
-   federführende Aufsichtsbehörde das Kohärenzverfahren gemäß \hyperref[ch:63]{Artikel 63} für die Angelegenheit ein.
+   federführende \hyperref[itm:04-21]{Aufsichtsbehörde} das Kohärenzverfahren gemäß \hyperref[ch:63]{Artikel 63} für die Angelegenheit ein.
   \label{itm:60-4}
 
-  \item Beabsichtigt die federführende Aufsichtsbehörde, sich dem \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} anzuschließen,
+  \item Beabsichtigt die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}, sich dem \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} anzuschließen,
    so legt sie den anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} einen überarbeiteten Beschlussentwurf zur Stellungnahme vor.
    Der überarbeitete Beschlussentwurf wird innerhalb von zwei Wochen dem Verfahren nach \hyperref[itm:60-4]{Absatz 4}
    unterzogen.
   \label{itm:60-5}
 
   \item Legt keine der anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} Einspruch gegen den Beschlussentwurf ein, der von der
-   federführenden Aufsichtsbehörde innerhalb der in den Absätzen \hyperref[itm:60-4]{4} und \hyperref[itm:60-5]
-   {5} festgelegten Frist vorgelegt wurde, so gelten die federführende Aufsichtsbehörde und die \hyperref[itm:04-22]{betroffenen
+   federführenden \hyperref[itm:04-21]{Aufsichtsbehörde} innerhalb der in den Absätzen \hyperref[itm:60-4]{4} und \hyperref[itm:60-5]
+   {5} festgelegten Frist vorgelegt wurde, so gelten die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} und die \hyperref[itm:04-22]{betroffenen
    Aufsichtsbehörden} als mit dem Beschlussentwurf einverstanden und sind an ihn gebunden.
   \label{itm:60-6}
 
-  \item Die federführende Aufsichtsbehörde erlässt den Beschluss und teilt ihn der Hauptniederlassung oder der einzigen
+  \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} erlässt den Beschluss und teilt ihn der Hauptniederlassung oder der einzigen
    Niederlassung des Verantwortlichen oder gegebenenfalls des Auftragsverarbeiters mit und setzt die anderen
    \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} und den Ausschuss von dem betreffenden Beschluss einschließlich einer Zusammenfassung
-   der maßgeblichen Fakten und Gründe in Kenntnis. Die Aufsichtsbehörde, bei der eine Beschwerde eingereicht worden
+   der maßgeblichen Fakten und Gründe in Kenntnis. Die \hyperref[itm:04-21]{Aufsichtsbehörde}, bei der eine Beschwerde eingereicht worden
    ist, unterrichtet den Beschwerdeführer über den Beschluss.
   \label{itm:60-7}
 
-  \item Wird eine Beschwerde abgelehnt oder abgewiesen, so erlässt die Aufsichtsbehörde, bei der die Beschwerde
+  \item Wird eine Beschwerde abgelehnt oder abgewiesen, so erlässt die \hyperref[itm:04-21]{Aufsichtsbehörde}, bei der die Beschwerde
    eingereicht wurde, abweichend von \hyperref[itm:60-7]{Absatz 7} den Beschluss, teilt ihn dem Beschwerdeführer mit
    und setzt den Verantwortlichen in Kenntnis.
   \label{itm:60-8}
 
-  \item Sind sich die federführende Aufsichtsbehörde und die betreffenden Aufsichtsbehörden darüber einig, Teile der
+  \item Sind sich die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} und die betreffenden \hyperref[itm:04-21]{Aufsichtsbehörden} darüber einig, Teile der
    Beschwerde abzulehnen oder abzuweisen und bezüglich anderer Teile dieser Beschwerde tätig zu werden, so wird in
-   dieser Angelegenheit für jeden dieser Teile ein eigener Beschluss erlassen. Die federführende Aufsichtsbehörde
+   dieser Angelegenheit für jeden dieser Teile ein eigener Beschluss erlassen. Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}
    erlässt den Beschluss für den Teil, der das Tätigwerden in Bezug auf den Verantwortlichen betrifft, teilt ihn der
    Hauptniederlassung oder einzigen Niederlassung des Verantwortlichen oder des Auftragsverarbeiters im Hoheitsgebiet
    ihres Mitgliedstaats mit und setzt den Beschwerdeführer hiervon in Kenntnis, während die für den Beschwerdeführer
-   zuständige Aufsichtsbehörde den Beschluss für den Teil erlässt, der die Ablehnung oder Abweisung dieser Beschwerde
+   zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} den Beschluss für den Teil erlässt, der die Ablehnung oder Abweisung dieser Beschwerde
    betrifft, und ihn diesem Beschwerdeführer mitteilt und den Verantwortlichen oder den Auftragsverarbeiter hiervon in
    Kenntnis setzt.
   \label{itm:60-9}
 
-  \item Nach der Unterrichtung über den Beschluss der federführenden Aufsichtsbehörde gemäß den Absätzen \hyperref
+  \item Nach der Unterrichtung über den Beschluss der federführenden \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß den Absätzen \hyperref
    [itm:60-7]{7} und \hyperref[itm:60-9]{9} ergreift der Verantwortliche oder der Auftragsverarbeiter die
    erforderlichen Maßnahmen, um die Verarbeitungstätigkeiten all seiner Niederlassungen in der Union mit dem Beschluss
-   in Einklang zu bringen. Der Verantwortliche oder der Auftragsverarbeiter teilt der federführenden Aufsichtsbehörde
+   in Einklang zu bringen. Der Verantwortliche oder der Auftragsverarbeiter teilt der federführenden \hyperref[itm:04-21]{Aufsichtsbehörde}
    die Maßnahmen mit, die zur Einhaltung des Beschlusses ergriffen wurden; diese wiederum unterrichtet die anderen
    \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden}.
   \label{itm:60-10}
@@ -77,7 +77,7 @@
    \hyperref[ch:66]{Artikel 66} zur Anwendung.
   \label{itm:60-11}
 
-  \item Die federführende Aufsichtsbehörde und die anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} übermitteln einander die nach
+  \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} und die anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} übermitteln einander die nach
    diesem Artikel geforderten Informationen auf elektronischem Wege unter Verwendung eines standardisierten Formats.
   \label{itm:60-12}
 
