--- a/artikel/62.tex
+++ b/artikel/62.tex
@@ -6,38 +6,38 @@
 
 \begin{enumerate}
 
-  \item Die Aufsichtsbehörden führen gegebenenfalls gemeinsame Maßnahmen einschließlich gemeinsamer Untersuchungen und
-   gemeinsamer Durchsetzungsmaßnahmen durch, an denen Mitglieder oder Bedienstete der Aufsichtsbehörden anderer
+  \item Die \hyperref[itm:04-21]{Aufsichtsbehörden} führen gegebenenfalls gemeinsame Maßnahmen einschließlich gemeinsamer Untersuchungen und
+   gemeinsamer Durchsetzungsmaßnahmen durch, an denen Mitglieder oder Bedienstete der \hyperref[itm:04-21]{Aufsichtsbehörden} anderer
    Mitgliedstaaten teilnehmen.
   \label{itm:62-1}
 
   \item Verfügt der Verantwortliche oder der Auftragsverarbeiter über Niederlassungen in mehreren Mitgliedstaaten oder
    werden die Verarbeitungsvorgänge voraussichtlich auf eine bedeutende Zahl \hyperref[itm:04-1]{betroffener Personen} in mehr als einem
-   Mitgliedstaat erhebliche Auswirkungen haben, ist die Aufsichtsbehörde jedes dieser Mitgliedstaaten berechtigt, an
+   Mitgliedstaat erhebliche Auswirkungen haben, ist die \hyperref[itm:04-21]{Aufsichtsbehörde} jedes dieser Mitgliedstaaten berechtigt, an
    den gemeinsamen Maßnahmen teilzunehmen. Die gemäß \hyperref[itm:56-1]{Artikel 56 Absatz 1} oder \hyperref[itm:56-4]
-   {Absatz 4} zuständige Aufsichtsbehörde lädt die Aufsichtsbehörde jedes dieser Mitgliedstaaten zur Teilnahme an den
-   gemeinsamen Maßnahmen ein und antwortet unverzüglich auf das Ersuchen einer Aufsichtsbehörde um Teilnahme.
+   {Absatz 4} zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} lädt die \hyperref[itm:04-21]{Aufsichtsbehörde} jedes dieser Mitgliedstaaten zur Teilnahme an den
+   gemeinsamen Maßnahmen ein und antwortet unverzüglich auf das Ersuchen einer \hyperref[itm:04-21]{Aufsichtsbehörde} um Teilnahme.
   \label{itm:62-2}
 
-  \item Eine Aufsichtsbehörde kann gemäß dem Recht des Mitgliedstaats und mit Genehmigung der unterstützenden
-   Aufsichtsbehörde den an den gemeinsamen Maßnahmen beteiligten Mitgliedern oder Bediensteten der unterstützenden
-   Aufsichtsbehörde Befugnisse einschließlich Untersuchungsbefugnisse übertragen oder, soweit dies nach dem Recht des
-   Mitgliedstaats der einladenden Aufsichtsbehörde zulässig ist, den Mitgliedern oder Bediensteten der unterstützenden
-   Aufsichtsbehörde gestatten, ihre Untersuchungsbefugnisse nach dem Recht des Mitgliedstaats der unterstützenden
-   Aufsichtsbehörde auszuüben. Diese Untersuchungsbefugnisse können nur unter der Leitung und in Gegenwart der
-   Mitglieder oder Bediensteten der einladenden Aufsichtsbehörde ausgeübt werden. Die Mitglieder oder Bediensteten der
-   unterstützenden Aufsichtsbehörde unterliegen dem Recht des Mitgliedstaats der einladenden Aufsichtsbehörde.
+  \item Eine \hyperref[itm:04-21]{Aufsichtsbehörde} kann gemäß dem Recht des Mitgliedstaats und mit Genehmigung der unterstützenden
+   \hyperref[itm:04-21]{Aufsichtsbehörde} den an den gemeinsamen Maßnahmen beteiligten Mitgliedern oder Bediensteten der unterstützenden
+   \hyperref[itm:04-21]{Aufsichtsbehörde} Befugnisse einschließlich Untersuchungsbefugnisse übertragen oder, soweit dies nach dem Recht des
+   Mitgliedstaats der einladenden \hyperref[itm:04-21]{Aufsichtsbehörde} zulässig ist, den Mitgliedern oder Bediensteten der unterstützenden
+   \hyperref[itm:04-21]{Aufsichtsbehörde} gestatten, ihre Untersuchungsbefugnisse nach dem Recht des Mitgliedstaats der unterstützenden
+   \hyperref[itm:04-21]{Aufsichtsbehörde} auszuüben. Diese Untersuchungsbefugnisse können nur unter der Leitung und in Gegenwart der
+   Mitglieder oder Bediensteten der einladenden \hyperref[itm:04-21]{Aufsichtsbehörde} ausgeübt werden. Die Mitglieder oder Bediensteten der
+   unterstützenden \hyperref[itm:04-21]{Aufsichtsbehörde} unterliegen dem Recht des Mitgliedstaats der einladenden \hyperref[itm:04-21]{Aufsichtsbehörde}.
   \label{itm:62-3}
 
-  \item Sind gemäß \hyperref[itm:62-1]{Absatz 1} Bedienstete einer unterstützenden Aufsichtsbehörde in einem anderen
-   Mitgliedstaat im Einsatz, so übernimmt der Mitgliedstaat der einladenden Aufsichtsbehörde nach Maßgabe des Rechts
+  \item Sind gemäß \hyperref[itm:62-1]{Absatz 1} Bedienstete einer unterstützenden \hyperref[itm:04-21]{Aufsichtsbehörde} in einem anderen
+   Mitgliedstaat im Einsatz, so übernimmt der Mitgliedstaat der einladenden \hyperref[itm:04-21]{Aufsichtsbehörde} nach Maßgabe des Rechts
    des Mitgliedstaats, in dessen Hoheitsgebiet der Einsatz erfolgt, die Verantwortung für ihr Handeln, einschließlich
    der Haftung für alle von ihnen bei ihrem Einsatz verursachten Schäden.
   \label{itm:62-4}
 
   \item Der Mitgliedstaat, in dessen Hoheitsgebiet der Schaden verursacht wurde, ersetzt diesen Schaden so, wie er ihn
    ersetzen müsste, wenn seine eigenen Bediensteten ihn verursacht hätten. Der Mitgliedstaat der unterstützenden
-   Aufsichtsbehörde, deren Bedienstete im Hoheitsgebiet eines anderen Mitgliedstaats einer Person Schaden zugefügt
+   \hyperref[itm:04-21]{Aufsichtsbehörde}, deren Bedienstete im Hoheitsgebiet eines anderen Mitgliedstaats einer Person Schaden zugefügt
    haben, erstattet diesem anderen Mitgliedstaat den Gesamtbetrag des Schadenersatzes, den dieser an die Berechtigten
    geleistet hat.
   \label{itm:62-5}
@@ -47,8 +47,8 @@
    {Absatz 4} genannten Betrag des erlittenen Schadens anderen Mitgliedstaaten gegenüber geltend zu machen.
   \label{itm:62-6}
 
-  \item Ist eine gemeinsame Maßnahme geplant und kommt eine Aufsichtsbehörde binnen eines Monats nicht der Verpflichtung
-   nach \hyperref[itm:62-2]{Absatz 2} Satz 2 des vorliegenden Artikels nach, so können die anderen Aufsichtsbehörden
+  \item Ist eine gemeinsame Maßnahme geplant und kommt eine \hyperref[itm:04-21]{Aufsichtsbehörde} binnen eines Monats nicht der Verpflichtung
+   nach \hyperref[itm:62-2]{Absatz 2} Satz 2 des vorliegenden Artikels nach, so können die anderen \hyperref[itm:04-21]{Aufsichtsbehörden}
    eine einstweilige Maßnahme im Hoheitsgebiet ihres Mitgliedstaats gemäß \hyperref[ch:55]{Artikel 55} ergreifen. In
    diesem Fall wird von einem dringenden Handlungsbedarf gemäß \hyperref[itm:66-1]{Artikel 66 Absatz 1} ausgegangen,
    der eine im Dringlichkeitsverfahren angenommene Stellungnahme oder einen im Dringlichkeitsverfahren angenommenen
